cmake_minimum_required (VERSION 3.8)

add_executable (algebra_lab "main.cpp"  "Large_Number/Large_Number.cpp" "Large_Number/Large_Number.h" "pow/large_number_pow.cpp" "pow/large_number_pow.h" "Sqrt.cpp" "Sqrt.h" "task10.cpp" "task10.h"    "Field.cpp" "FiniteFieldElement.h" "phi_and_lambda.h" "phi_and_lambda.cpp" "Primal_1.cpp" "Primal_1.h" "Pollard_Rho.cpp" "Pollard_Rho.h" "unit_test_framework.h" "pow/test_pow.h" "pow/test_pow.cpp" "pow/time_testing_pow.h" "pow/time_testing_pow.cpp" "my_timer.h" "my_timer.cpp" "Boost_tests/Test.cpp")
